--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.1.1",
+    "mongoose": "^8.1.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
